documentation and test apis
